RESOLVED FIXED183922
AX: Web table row count is incorrect when role row is added to <tr> in DOM
https://bugs.webkit.org/show_bug.cgi?id=183922
Summary AX: Web table row count is incorrect when role row is added to <tr> in DOM
Nan Wang
Reported 2018-03-22 16:20:45 PDT
When “role=row” is added to a <tr> in a native <table>, it causes WebKit to think that the table is empty <rdar://problem/37838906>
Attachments
patch to fix crash (4.45 KB, patch)
2018-03-22 16:55 PDT, Nan Wang
no flags
patch (4.45 KB, patch)
2018-03-22 16:56 PDT, Nan Wang
no flags
Nan Wang
Comment 1 2018-03-22 16:55:38 PDT
Created attachment 336335 [details] patch to fix crash
Nan Wang
Comment 2 2018-03-22 16:56:00 PDT
WebKit Commit Bot
Comment 3 2018-03-22 18:41:49 PDT
Comment on attachment 336336 [details] patch Clearing flags on attachment: 336336 Committed r229879: <https://trac.webkit.org/changeset/229879>
WebKit Commit Bot
Comment 4 2018-03-22 18:41:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.