AX: Web table row count is incorrect when role row is added to <tr> in DOM https://bugs.webkit.org/show_bug.cgi?id=183922

Reviewed by Chris Fleizach.

Source/WebCore:

Although the parent table for an ARIA grid row should be an ARIA table, we
should return the native table if the row is native <tr>.

Test: accessibility/row-with-aria-role-in-native-table.html

* accessibility/AccessibilityARIAGridRow.cpp:
(WebCore::AccessibilityARIAGridRow::parentTable const):

LayoutTests:

* accessibility/row-with-aria-role-in-native-table-expected.txt: Added.
* accessibility/row-with-aria-role-in-native-table.html: Added.


Canonical link: https://commits.webkit.org/199514@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229879 268f45cc-cd09-0410-ab3c-d52691b4dbfc